registry/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry-client
  namespace: samples
spec:
  containers:
  - name: docker
    image: lordgaav/dind-options
    securityContext:
      privileged: true
