registry/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-frontend
  namespace: samples
spec:
  type: NodePort
  selector:
    app: registry-frontend
  ports:
  - port: 80
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: registry-frontend
  namespace: samples
spec:
  serviceName: registry-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: registry-frontend
    spec:
      containers:
      - name: registry-frontend
        image: konradkleine/docker-registry-frontend:v2
        ports:
        - containerPort: 80
