registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: samples
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: "1000m"
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "60s"
    nginx.org/client-max-body-size: "1000m"
spec:
  tls:
  - hosts:
    - registry.minikube.test
    secretName: registry
  rules:
  - host: registry.minikube.test
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
